updated type scale to use the OG de.css type scale, fixed font size issue with code & pre tags, updated some media spacing for nested img, updated copy style margins, updated hr margin

--- a/src/_base.css
+++ b/src/_base.css
@@ -30,7 +30,7 @@ hr {
   border-top: $line1 solid currentColor;
   color: inherit;
   display: block;
-  margin: $ms3 0;
+  margin: 0 0 $ms3;
 }
 
 /* svg: */
