--- a/src/_media.css
+++ b/src/_media.css
@@ -8,8 +8,13 @@ img,
 video {
   border-style: none;
   display: block;
-  margin: $ms3 0;
+  margin: 0 0 $ms3;
   padding: 0;
   vertical-align: middle;
   width: 100%;
+}
+
+/* nested img */
+figure img {
+  margin: 0;
 }
